feat: implementando swagger open api 2
